# fooocus-nix

./: .gitignore  CLAUDE.md  README.md  flake.nix  pyproject.toml
.github/workflows/: docker.yml
scripts/: config.sh  install.sh  launcher.sh  logger.sh  persistence.sh  runtime.sh
